src/applications/minio/deploy/kustomize-tenant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
      - minio.smart-home.k8sservices.local
    secretName: tls-minio
  rules:
  - host: minio.smart-home.k8sservices.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 80
